# fund

./: .envrc  .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  LICENSE  README.md  flake.nix  hooks.nix  package.json
adrs/: 0001-donation-resistant-share-pricing.md  0002-tiered-off-solana-nav-inclusion.md  0003-permissionless-nav-attestation.md  0004-nav-accounting-architecture.md
docs/: anchor.md  sealevel-attacks.md  security-design.md
programs/fund/: Cargo.toml  README.md  SPEC.md
programs/fund/src/: error.rs  instructions.rs  lib.rs  state.rs
programs/fund/src/instructions/: create_fund.rs  deposit.rs  initialize.rs
programs/fund/tests/: test_create_fund.rs  test_deposit.rs  test_initialize.rs
scripts/: cargo-build-sbf.nu  cargo-build-sbf.test.nu  cargo-rustup-arg-shim.nu  cargo-rustup-arg-shim.test.nu  probe-cargo-build-sbf.nu  probe-cargo-build-sbf.test.nu  probe-rustc-shim.nu  regenerate-cargo-lock-sbf.nu  setup-rust-toolchain.nu  setup-rust-toolchain.test.nu
tests/: create-fund.ts  deposit-withdraw.ts
