[workspace]
members = ["programs/*"]
# `resolver = "2"` (not "3") because the `anchor` CLI's TOML parser only
# understands resolvers 1 and 2. The MSRV-aware resolver was only needed
# at lockfile-generation time; `Cargo.lock` is already pinned, so cargo
# itself is happy with "2" for actual builds.
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
